# gb_megafon

./: .gitignore  baseline.ipynb  common.py  comparison.ipynb  eda.ipynb  merge_method_metrics.json  partial_fit.ipynb  readme.md  requirements.txt  research.ipynb  transformers.py
airflow/: prepare_dag.py
airflow/jobs/: source.py
dags/: .airflowignore  common.py  cv_dag.py  fit_dag.py  gridsearch_dag.py  modeling_dag.py  pca_features_dag.py  prepare_dag.py  settings.py  task.py
dags/jobs/: common.py  source.py  transformers.py
data/: correlation.csv  covariance.csv  feat_describe.csv  fit_params.json  grid_params.json  parameters.conf
drafts/: pyspark_pca.ipynb
modeling/: check.ipynb  fit.ipynb  predict.py  predict_data_test.csv  threshold.ipynb  transformers.py
package/: readme.md  setup.cfg
package/src/telecom_transformers.egg-info/: PKG-INFO  SOURCES.txt
research/: FE.ipynb  auxiliary.py  baseline.ipynb  common.py  comparison.ipynb  eda.ipynb  features.ipynb  merge_method_metrics.json  research.ipynb
