[metadata]
name = telecom-transformers
version = 1.0.0
author = fragarie
author_email = fragarie@yandex.com
description = Transformers pack for Mega_telecom model
long_description = file: README.md
long_description_content_type = text/markdown
# url = 
project_urls =
    Bug Tracker = https://github.com/j2cry/mega_telecom/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src